--- a/templates/done.html
+++ b/templates/done.html
@@ -28,8 +28,7 @@
             <div style="margin: 20px 0 20px 0;"><h1>{{ tip }}</h1></div>
             
             <div style="margin: 20px 0 20px 0;">
-                <a style="font-size: 20px;" href="{{ view }}" target="_blank">View</a> | 
-                <a style="font-size: 20px;" href="{{ again }}">Again</a>
+                <a style="font-size: 20px;" href="{{ back }}">Back Your Account</a>
             </div>
             <!-- <div><img src="{{ img }}" alt=""></div> -->
         </div>
