--- a/static/css/module.css
+++ b/static/css/module.css
@@ -21,7 +21,7 @@ wrap > container > grid
   height: 35px;
   margin-top: 10px;
   display: block;
-  background: url('../image/ico/mamleo-200-35-03.png') no-repeat;
+  background: url('../image/ico/mamleo-200-35-03.png') no-repeat -6px;
   border-radius: 3px;
 }
 .brand-mini
