--- a/templates/account.html
+++ b/templates/account.html
@@ -21,12 +21,37 @@
         <div class="container flex-container" style="height: 100px; border-radius: 6px;">
             <h1>Hi, {{ user_name }}.</h1>
         </div>
-        <div class="container flex-container" style="line-height: 100px;">
-            <p style="line-height: 100px;">Your bag is empty. </p>&nbsp;&nbsp;&nbsp;<a style="color: cornflowerblue; text-decoration-line: underline;" href="/JAL/products"><h2>Shopping Now</h2></a>
-        </div>
     </div>
 
-    <div class="wrap" style="height: 200px; background: #fafafa; padding: 2% 0; margin: 2% 0;">
+    <div class="wrap">
+        {% if bag %}
+        <div class="container flex-container" style="margin-bottom: 5%;">
+            <h1>Your Shopping Bag</h1>
+        </div>
+        {% else %}
+        <div class="container flex-container" style="margin-bottom: 5%;">
+            <p style="padding-top: 10px;">Your bag is empty. </p>&nbsp;&nbsp;&nbsp;<a style="color: cornflowerblue; text-decoration-line: underline;" href="/JAL/products"><h2>Shopping Now</h2></a>
+        </div>
+        {% endif %}
+    </div>
+
+    <div class="wrap" style="background: #fafafa; padding: 2% 0; margin-bottom: 2%;">
+        <div class="container">
+            <h1>Your Coupon</h1>
+            <!-- <div class="flex-container" style="margin-top: 3%; justify-content: space-between;"> -->
+            <div class="flex-container" style="margin-top: 3%;">
+                <div style="margin-right: 2%; width: 18%; border-radius: 8px; background:rgb(57, 157, 244, 0.2); font-size: 50px; text-align: center; position: relative;">20%<span style="width: 50px; height: 50px; position: absolute; top: 0px; right: 5px; font-size: 22px;">off</span></div>
+                <div style="margin-right: 2%; width: 18%; border-radius: 8px; background:rgba(255, 145, 0, 0.2); font-size: 50px; text-align: center; position: relative;">$ 5.00<span style="width: 50px; height: 50px; position: absolute; top: 0px; right: 5px; font-size: 22px;">off</span></div>
+                <div style="margin-right: 2%; width: 18%; border-radius: 8px; background:rgba(255, 0, 251, 0.2); font-size: 50px; text-align: center; position: relative;">20%<span style="width: 50px; height: 50px; position: absolute; top: 0px; right: 5px; font-size: 22px;">off</span></div>
+                <div style="margin-right: 2%; width: 18%; border-radius: 8px; background:rgba(174, 255, 175, 0.2); font-size: 50px; text-align: center; position: relative;">20%<span style="width: 50px; height: 50px; position: absolute; top: 0px; right: 5px; font-size: 22px;">off</span></div>
+                <div style="width: 18%; border-radius: 8px; background:rgba(179, 169, 238, 0.2); font-size: 50px; text-align: center; position: relative;">20%<span style="width: 50px; height: 50px; position: absolute; top: 0px; right: 5px; font-size: 22px;">off</span></div>
+            </div>
+            <div class="flex-container" style="margin-top: 3%;">
+                <p>Coupon Code should be pushed to your account, in every Month. If your coupon code is invalid, please tell us by [ me.and.mr.leo.promote@gmail.com ]. We will resend the new coupon code to your account and email.</p>
+            </div>
+        </div>
+    </div>
+    <!-- <div class="wrap" style="height: 200px; background: #fafafa; padding: 2% 0; margin: 2% 0;">
         <div class="container">
             <fieldset>
                 <legend>YourCoupon</legend>
@@ -34,54 +59,74 @@
                 <div style="float: left; margin-left: 1%;">Code: E3QFVDAG3RFWR3FA</div>
             </fieldset>
         </div>
-    </div>
+    </div> -->
 
     <div class="wrap">
         <div class="container">
             <h1>Account Settings</h1>
-            <br>
-            <div class="flex-container">
+            <div class="shipping flex-container" style="margin: 3% 0;">
                 <div style="height: 200px; width: 25%;">
-                    <h2>Shpping</h2>
-                    <a href="myAccount&=edit" style="color: cornflowerblue; text-decoration-line: underline;">Edit</a>
+                    <h2>Shipping</h2>
+                    <a onclick="widget('editShipping')" style="color: cornflowerblue; text-decoration-line: underline; cursor: pointer;">Edit</a>
+                    <!-- <a href="myAccount&=edit" style="color: cornflowerblue; text-decoration-line: underline;">Edit</a> -->
                 </div>
                 <div style="height: 200px; width: 25%; padding-top: 5px;">
                     <h3>Shipping address</h3>
-                    {% if user_account.address %}
-                    <div>{{ user_account.address }}</div>
+                    {% if user_account.first_name %}
+                    <div><span>{{ user_account.first_name }} {{ user_account.last_name }}</span></div>
                     {% else %}
-                    <div>Address</div>
+                    <div><span style="color: #ccc;">Address</span></div>
+                    {% endif %}
+                    {% if user_account.address %}
+                    <div><span>{{ user_account.address }}</span></div>
+                    {% else %}
+                    <div><span style="color: #ccc;">Address</span></div>
                     {% endif %}
                     {% if user_account.street %}
-                    <div>{{ user_account.street }}</div>
+                    <div><span>{{ user_account.street }}</span></div>
                     {% else %}
-                    <div>Street</div>
+                    <div><span style="color: #ccc;">Street</span></div>
                     {% endif %}
                     {% if user_account.city %}
-                    <div>{{ user_account.city }} {{ user_account.code }}</div>
+                    <div><span>{{ user_account.city }} {{ user_account.code }}</span></div>
                     {% else %}
-                    <div>City: {{ user_account.city }}</div>
+                    <div><span style="color: #ccc;">City & Code</span></div>
                     {% endif %}
                     {% if user_account.country %}
-                    <div>{{ user_account.country }}</div>
+                    <div><span>{{ user_account.country }}</span></div>
                     {% else %}
-                    <div>Country</div>
+                    <div><span style="color: #ccc;">Country</span></div>
+                    {% endif %}
+                    {% if user_account.phone %}
+                    <div><span>{{ user_account.phone }}</span></div>
+                    {% else %}
+                    <div><span style="color: #ccc;">Phone Number</span></div>
                     {% endif %}
                 </div>
                 <div style="height: 200px; width: 25%; padding-top: 5px;">
                     <h3>Contact information</h3>
-                    <div>{{ user_account.email }}</div>
+                    <div><span>{{ user_account.email }}</span></div>
+                    {% if user_account.phone %}
+                    <div><span>{{ user_account.phone }}</span></div>
+                    {% else %}
+                    <div><span style="color: #ccc;">Phone Number</span></div>
+                    {% endif %}
                 </div>
             </div>
-            <form class="login" action="/JAL/myAccount&=edit-done" method="post" style="display: none;">
+            <form id="edit-shipping" action="/JAL/account&=edit-shipping" method="post" style="display: none;">
+            <!-- <form class="login" action="/JAL/myAccount&=edit-done" method="post"> -->
                 {%csrf_token%}
-                <div class="flex-container" style="background: #fafafa;">
-                    <div style="height: 200px; width: 25%;">
-                        <h2>Shpping</h2>
+                <div class="flex-container" style="background: #fafafa; padding: 2%; margin-bottom: 5%; border-radius: 6px;">
+                    <div style="width: 25%;">
+                        <h2>Shipping</h2>
                         <button id="" type="submit"><h3>Commit</h3></button>
                     </div>
-                    <div style="height: 300px; width: 25%;">
+                    <div style="width: 25%;">
                         <h3>Shipping address</h3>
+                        <div>FirstName</div>
+                        <div><input id="" type="text" name="first_name" value="{{ user_account.first_name }}"></div>
+                        <div>LastName</div>
+                        <div><input id="" type="text" name="last_name" value="{{ user_account.last_name }}"></div>
                         <div>Address</div>
                         <div><input id="" type="text" name="address" value="{{ user_account.address }}"></div>
                         <div>Street</div>
@@ -91,28 +136,52 @@
                         <div>Country</div>
                         <div><input id="" type="text" name="country" value="{{ user_account.country }}"></div>
                     </div>
-                    <div style="height: 200px; width: 25%;">
+                    <div style="width: 25%;">
                         <h3>Contact information</h3>
                         <div>{{ user_account.email }}</div>
+                        <div>Phone Number</div>
+                        <div><input id="" type="text" name="phone" value="{{ user_account.phone }}"></div>
                     </div>
+                    <div style="height: 300px; width: 25%; text-align: end; font-size:25px; cursor: pointer;" onclick="widget('close')">X</div>
                 </div>
             </form>
-            <div class="flex-container">
+            <!-- <div class="flex-container">
                 <div style="height: 200px; width: 25%;">
                     <h2>Payment</h2>
                 </div>
                 <div style="height: 200px; width: 25%; padding-top: 5px;">
                 COMMING SOON...
                 </div>
-            </div>
-            <div class="flex-container">
+            </div> -->
+            <div class="flex-container id-information" style="margin: 3% 0;">
                 <div style="height: 200px; width: 25%;">
                     <h2>ID Information</h2>
+                    <a onclick="widget('editID')" style="color: cornflowerblue; text-decoration-line: underline; cursor: pointer;">Edit</a>
                 </div>
                 <div style="height: 200px; width: 25%; padding-top: 5px;">
-                    <div>{{ user_account.email }}</div>
+                    <div><span>{{ user_name }}</span></div>
+                    <div><span>{{ user_account.email }}</span></div>
                 </div>
             </div>
+            <form id="edit-ID" action="/JAL/account&=edit-id" method="post" style="display: none;">
+            <!-- <form class="login" action="/JAL/myAccount&=edit-done" method="post"> -->
+                {%csrf_token%}
+                <div class="flex-container" style="background: #fafafa; padding: 2%; margin-bottom: 5%; border-radius: 6px;">
+                    <div style="height: 200px; width: 25%;">
+                        <h2>ID Information</h2>
+                        <button id="" type="submit"><h3>Commit</h3></button>
+                    </div>
+                    <div style="height: 300px; width: 25%;">
+                        <h3>Sign ID</h3>
+                        <div>{{ user_account.email }}</div>
+                        <div>Password</div>
+                        <div><input id="" type="text" name="password" value="{{ user_account.password }}"></div>
+                        <div>UserName</div>
+                        <div><input id="" type="text" name="user_name" value="{{ user_account.user_name }}"></div>
+                    </div>
+                    <div style="height: 300px; width: 25%; text-align: end; font-size:25px; cursor: pointer;" onclick="widget('close')">X</div>
+                </div>
+            </form>
         </div>
     </div>
 
