--- a/static/css/module.css
+++ b/static/css/module.css
@@ -110,6 +110,7 @@ widget
   font-weight: 350;
   color: #fff;
   text-align: center;
+  margin: 0 auto;
 }
 /*************************************************LINE*************************************************/
 /*************************************************
