--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                     </div>
                     <div>
                         <!-- <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3> -->
-                        <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3>
+                        <h3><a href="{{ promote_info.promote_url }}" class="learnMore">Learn more</a></h3>
                     </div>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                     </div>
                     <div>
                         <!-- <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3> -->
-                        <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3>
+                        <h3><a href="{{ promote_info.promote_url }}" class="learnMore">Learn more</a></h3>
                     </div>
                 </div>
             </div>
@@ -53,7 +53,7 @@
                     </div>
                     <div>
                         <!-- <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3> -->
-                        <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3>
+                        <h3><a href="{{ promote_info.promote_url }}" class="learnMore">Learn more</a></h3>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                     </div>
                     <div>
                         <!-- <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3> -->
-                        <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3>
+                        <h3><a href="{{ promote_info.promote_url }}" class="learnMore">Learn more</a></h3>
                     </div>
                 </div>
             </div>
