--- a/templates/nav.html
+++ b/templates/nav.html
@@ -31,7 +31,8 @@
             {% else %}
             <li><a href="{{ nav_account.login.0 }}">{{ nav_account.login.1 }}</a></li>
             <!-- <li><a href="{{ nav_account.cart.0 }}">{{ nav_account.cart.1 }}</a></li> -->
-            <div><a href="{{ nav_account.cart.0 }}" class="material-symbols-outlined size-30">shopping_cart</a></div>
+            <!-- <div><a href="{{ nav_account.cart.0 }}" class="material-symbols-outlined size-30">shopping_cart</a></div> -->
+            <div><a href="{{ nav_account.cart.0 }}" class="bag"></a></div>
             {% endif %}
             <!-- {% if user_account %}
             <div><a href="{{ nav_account.login.0 }}" title="login" class="material-symbols-outlined size-30">account_circle</a></div>
