--- a/templates/head.html
+++ b/templates/head.html
@@ -3,6 +3,7 @@
 
 <!-- fresh page /10s -->
 <!-- <meta http-equiv="refresh" content="10; url=http://www.163.com"> -->
+<meta http-equiv="refresh" content="3600">
 
 <!-- del temp-->
 <meta http-equiv="Expires" content="0">
