--- a/templates/create-promote.html
+++ b/templates/create-promote.html
@@ -45,7 +45,7 @@
                 <h3><b>Title-03</b></h3>
                 <textarea style="font-size: 18px;" name="bullet_point_03" id="" cols="130" rows="2"></textarea>
                 <h3><b>ReleaseChannel</b></h3>
-                <textarea style="font-size: 18px;" name="bullet_point_03" id="" cols="130" rows="2"></textarea>
+                <textarea style="font-size: 18px;" name="promote_channel" id="" cols="130" rows="2"></textarea>
             </div>
             <!-- <br>
             <div class="container products-shelf">
