--- a/templates/products.html
+++ b/templates/products.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 {% include "head.html" %}
-<title>ME AND ME. LEO</title>
+<title>ME AND MR. LEO</title>
 </head>
 <body page_id="{{ page_id }}">
     
