--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,16 +1,17 @@
 <footer>
-    <div class="container flex-container padding-t-b">
-        <div>
+    <div class="container flex-container">
+        <div style="margin-right: 3%;">
             <h3><b>Brand</b></h3>
             <ul>
                 <li><a href="">Trenovker</a></li>
                 <li><a href="">ME AND MR. LEO</a></li>
             </ul>
         </div>
-        <div>
-            <h3><b>About</b></h3>
+        <div style="margin-right: 3%;">
+            <h3><b>Contact Us</b></h3>
             <ul>
-                <li><a href="">Contact Us</a></li>
+                <li><a href="">me.and.mr.leo.official@gmail.com</a></li>
+                <li><a href="">me.and.mr.leo.pronote@gmail.com</a></li>
             </ul>
         </div>
         <div></div>
