--- a/templates/nav.html
+++ b/templates/nav.html
@@ -45,9 +45,9 @@
 
     <div class="nav-mini container">
         <ul class="no-padding no-margin no-list-style">
-            <li><a href="{{ nav_nav.Product }}" class="material-symbols-outlined size-48">menu</a></li>
+            <li><a href="{{ nav_nav.Products }}" class="material-symbols-outlined size-48">menu</a></li>
             <li><a class="brand-mini" href="{{ nav_index.index }}" id="width-mini"></a></li>
-            <!-- <li><a href="{{ nav_account.Cart.0 }}" class="material-symbols-outlined size-48">shopping_cart</a></li> -->
+            <li><a href="{{ nav_account.cart.0 }}" class="bag"></a></li>
         </ul>
     </div>
 </nav>
