--- a/templates/index.html
+++ b/templates/index.html
@@ -38,10 +38,10 @@
                     <div>
                         <h1 class="stronger">{{ promote_info.0.bullet_point_01 }}</h1>
                     </div>
-                    <div>
+                    <!-- <div>
                         <span>{{ promote_info.0.bullet_point_02 }}</span>
                         <h2>{{ promote_info.0.bullet_point_03 }}</h2>
-                    </div>
+                    </div> -->
                     <div>
                         <!-- <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3> -->
                         <h3><a href="{{ promote_info.0.url }}" class="learnMore">Learn more</a></h3>
@@ -53,10 +53,10 @@
                     <div>
                         <h1 class="stronger">{{ promote_info.1.bullet_point_01 }}</h1>
                     </div>
-                    <div>
+                    <!-- <div>
                         <span>{{ promote_info.1.bullet_point_02 }}</span>
                         <h2>{{ promote_info.1.bullet_point_03 }}</h2>
-                    </div>
+                    </div> -->
                     <div>
                         <!-- <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3> -->
                         <h3><a href="{{ promote_info.1.url }}" class="learnMore">Learn more</a></h3>
@@ -68,10 +68,10 @@
                     <div>
                         <h1 class="stronger">{{ promote_info.2.bullet_point_01 }}</h1>
                     </div>
-                    <div>
+                    <!-- <div>
                         <span>{{ promote_info.2.bullet_point_02 }}</span>
                         <h2>{{ promote_info.2.bullet_point_03 }}</h2>
-                    </div>
+                    </div> -->
                     <div>
                         <!-- <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3> -->
                         <h3><a href="{{ promote_info.2.url }}" class="learnMore">Learn more</a></h3>
@@ -83,10 +83,10 @@
                     <div>
                         <h1 class="stronger">{{ promote_info.3.bullet_point_01 }}</h1>
                     </div>
-                    <div>
+                    <!-- <div>
                         <span>{{ promote_info.3.bullet_point_02 }}</span>
                         <h2>{{ promote_info.3.bullet_point_03 }}</h2>
-                    </div>
+                    </div> -->
                     <div>
                         <!-- <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3> -->
                         <h3><a href="{{ promote_info.3.url }}" class="learnMore">Learn more</a></h3>
@@ -106,22 +106,22 @@
 
     <!---------- promote-sku ---------->
     <div class="wrap">
-        <div class="container flex-container" style="padding: 10% 0;">
+        <div class="container flex-container promote-sku">
             <div style="height: 500px; width: 50%; text-align: center;"><img src="{{ product_info.6.first_img }}" style="width: auto; height: 100%;" alt=""></div>
             <div style="height: 100%; width: 50%;">
-                <div style="margin-bottom: 3%;"><h1>{{ product_info_title.0 }}</h1></div>
-                <div style="margin-bottom: 3%;"><h3>{{ product_info_title.1 }}</h3></div>
-                <div style="margin-bottom: 3%;"><h3>{{ product_info_title.2 }}</h3></div>
-                <div style="margin-bottom: 9%;"><h3>{{ product_info_title.3 }}</h3></div>
+                <div><h1>{{ product_info_title.0 }}</h1></div>
+                <div><h3>{{ product_info_title.1 }}</h3></div>
+                <div><h3>{{ product_info_title.2 }}</h3></div>
+                <div><h3>{{ product_info_title.3 }}</h3></div>
                 <!-- <div style="margin-bottom: 9%;"><h4>{{ product_info_title }}</h4></div> -->
-                <div style="margin-bottom: 3%;">
+                <div>
                     <span class="flex-container price">
                         <span class="price-symbol">$</span>
                         <span class="price-int">{{ product_info.6.price }}</span>
                         <span class="price-float"></span>
                     </span>
                 </div>
-                <div style="margin-bottom: 3%;"><a href="http://www.amazon.com/dp/{{ product_info.6.asin }}" target="_blank" style="color: cornflowerblue; font-size: 22px;">Buy on Amazon >>></a></div>
+                <div><a class="buyOnAmazon" href="http://www.amazon.com/dp/{{ product_info.6.asin }}" target="_blank">Buy on Amazon >>></a></div>
             </div>
         </div>
     </div>
