index style update

--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,7 @@
     <!---------- promote-sku ---------->
     <div class="wrap">
         <div class="container flex-container promote-sku">
-            <div style="height: 500px; width: 50%; text-align: center;"><img src="{{ product_info.6.first_img }}" style="width: auto; height: 100%;" alt=""></div>
+            <div style="height: 500px; width: 50%; text-align: center;"><img src="{{ product_info.10.first_img }}" style="width: auto; height: 100%;" alt=""></div>
             <div style="height: 100%; width: 50%;">
                 <div><h1>{{ product_info_title.0 }}</h1></div>
                 <div><h3>{{ product_info_title.1 }}</h3></div>
@@ -117,18 +117,18 @@
                 <div>
                     <span class="flex-container price">
                         <span class="price-symbol">$</span>
-                        <span class="price-int">{{ product_info.6.price }}</span>
+                        <span class="price-int">{{ product_info.10.price }}</span>
                         <span class="price-float"></span>
                     </span>
                 </div>
-                <div><a class="buyOnAmazon" href="http://www.amazon.com/dp/{{ product_info.6.asin }}" target="_blank">Buy on Amazon >>></a></div>
+                <div><a class="buyOnAmazon" href="http://www.amazon.com/dp/{{ product_info.10.asin }}" target="_blank">Buy on Amazon >>></a></div>
             </div>
         </div>
     </div>
 
     <main>
-        <div class="container grid-container products-shelf">
-            <div class="margin-around">
+        <div class="container grid-container">
+            <div>
                 <div><a href="products&asin={{ product_info.5.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.5.first_img }}" alt=""></a></div>
                 <div><a href="products&asin={{ product_info.5.asin }}{{ includ_user_id_url }}" title="{{ product_info.5.title }}" class="display-row-3">{{ product_info.5.title }}</a></div>
                 <div>
@@ -142,7 +142,7 @@
                     <span class="coupon">Coupon: 20% off</span>
                 </div> -->
             </div>
-            <div class="margin-around">
+            <div>
                 <div><a href="products&asin={{ product_info.6.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.6.first_img }}" alt=""></a></div>
                 <div><a href="products&asin={{ product_info.6.asin }}{{ includ_user_id_url }}" title="{{ product_info.6.title }}" class="display-row-3">{{ product_info.6.title }}</a></div>
                 <div>
@@ -153,7 +153,7 @@
                     </span>
                 </div>
             </div>
-            <div class="margin-around">
+            <div>
                 <div><a href="products&asin={{ product_info.7.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.7.first_img }}" alt=""></a></div>
                 <div><a href="products&asin={{ product_info.7.asin }}{{ includ_user_id_url }}" title="{{ product_info.7.title }}" class="display-row-3">{{ product_info.7.title }}</a></div>
                 <div>
@@ -167,7 +167,7 @@
                     <span class="coupon">Coupon: 20% off</span>
                 </div> -->
             </div>
-            <div class="margin-around">
+            <div>
                 <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.8.first_img }}" alt=""></a></div>
                 <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}" title="{{ product_info.8.title }}" class="display-row-3">{{ product_info.8.title }}</a></div>
                 <div>
@@ -178,7 +178,7 @@
                     </span>
                 </div>
             </div>
-            <div class="margin-around">
+            <div>
                 <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.9.first_img }}" alt=""></a></div>
                 <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}" title="{{ product_info.8.title }}" class="display-row-3">{{ product_info.8.title }}</a></div>
                 <div>
