--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -141,13 +141,13 @@ wrap > container > grid
   .grid-container
   {
     display: grid;
-    grid-gap: 80px 30px;
+    grid-gap: 30px;
     grid-template-columns: repeat(2, auto);
-    grid-template-rows: repeat(12, auto);
+    /* grid-template-rows: repeat(12, auto); */
     margin-top: 3%;
     margin-bottom: 20%;
-    margin-left: 1%;
-    margin-right: 1%;
+    /* margin-left: 1%;
+    margin-right: 1%; */
   }
   /* listing start*/
   .grid-listing
