--- a/static/css/module.css
+++ b/static/css/module.css
@@ -187,17 +187,19 @@ my-cart card --start
 /* 
 my-cart card --end
 */
-
 .radius-style, .radius-div > div
 {
   border-radius: 8px;
   border: 1px solid rgb(239, 239, 239);
   background-color: #fcfcfc;
 }
-
 .promote-sku
 {
   padding: 10% 0;
+}
+.promote-sku > div
+{
+  width: 50%;
 }
 .promote-sku > div:last-child > div
 {
@@ -267,6 +269,11 @@ Screen: for mobile, width under 980px
   {
     padding: 10% 0;
   }
+  .promote-sku > div
+  {
+    width: 40%;
+    margin: 5%;
+  }
   .promote-sku > div:last-child > div
   {
     margin-bottom: 5%;
@@ -276,6 +283,18 @@ Screen: for mobile, width under 980px
     font-size: 42px;
     color: #000fff;
     text-decoration: underline;
+  }
+  .promote-products
+  {
+    background-color: #e9e9e9;
+    padding: 3%;
+    /* border-radius: 16px; */
+  }
+  .promote-products > div
+  {
+    background-color: #fff;
+    border-radius: 16px;
+    padding: 5% 5% 15% 5%;
   }
   .product-info > div > h1
   {
