--- a/templates/index.html
+++ b/templates/index.html
@@ -107,8 +107,8 @@
     <!---------- promote-sku ---------->
     <div class="wrap">
         <div class="container flex-container promote-sku">
-            <div style="height: 500px; width: 50%; text-align: center;"><img src="{{ product_info.10.first_img }}" style="width: auto; height: 100%;" alt=""></div>
-            <div style="height: 100%; width: 50%;">
+            <div style="height: 500px; text-align: center;"><img src="{{ product_info.10.first_img }}" style="width: auto; height: 100%;" alt=""></div>
+            <div style="height: 100%;">
                 <div><h1>{{ product_info_title.0 }}</h1></div>
                 <div><h3>{{ product_info_title.1 }}</h3></div>
                 <div><h3>{{ product_info_title.2 }}</h3></div>
@@ -127,7 +127,7 @@
     </div>
 
     <main>
-        <div class="container grid-container">
+        <div class="container grid-container promote-products">
             <div>
                 <div><a href="products&asin={{ product_info.5.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.5.first_img }}" alt=""></a></div>
                 <div><a href="products&asin={{ product_info.5.asin }}{{ includ_user_id_url }}" title="{{ product_info.5.title }}" class="display-row-3">{{ product_info.5.title }}</a></div>
