urls del JAL update

--- a/templates/account.html
+++ b/templates/account.html
@@ -126,7 +126,7 @@
                     {% endif %}
                 </div>
             </div>
-            <form id="edit-shipping" action="/JAL/account&=edit-shipping" method="post" style="display: none;">
+            <form id="edit-shipping" action="/account&=edit-shipping" method="post" style="display: none;">
             <!-- <form class="login" action="/JAL/myAccount&=edit-done" method="post"> -->
                 {%csrf_token%}
                 <div class="flex-container" style="background: #fafafa; padding: 2%; margin-bottom: 5%; border-radius: 6px;">
@@ -176,7 +176,7 @@
                     <div><span>{{ user_account.email }}</span></div>
                 </div>
             </div>
-            <form id="edit-ID" action="/JAL/account&=edit-id" method="post" style="display: none;">
+            <form id="edit-ID" action="/account&=edit-id" method="post" style="display: none;">
             <!-- <form class="login" action="/JAL/myAccount&=edit-done" method="post"> -->
                 {%csrf_token%}
                 <div class="flex-container" style="background: #fafafa; padding: 2%; margin-bottom: 5%; border-radius: 6px;">
