--- a/templates/create-promote.html
+++ b/templates/create-promote.html
@@ -15,7 +15,7 @@
             <input type="text" value="{{ title_01.bullet_point_01 }}">
         </div> -->
         
-        <form class="login" action="/JAL/adminjessie&promote=create-done" method="post">
+        <form class="login" action="/adminjessie&promote=create-done" method="post">
             {%csrf_token%}
             <br> 
             <div class="container" style="border: 1px dashed #ff8800; border-radius: 6px;">
