--- a/templates/edit-listing.html
+++ b/templates/edit-listing.html
@@ -18,7 +18,7 @@
         Form Data Start
      -->
 
-    <form class="login" action="/JAL/adminjessie&listing={{ asin }}-edit-done" method="post">
+    <form class="login" action="/adminjessie&listing={{ asin }}-edit-done" method="post">
         {%csrf_token%}
         <div class="wrap">
             <br>
