--- a/templates/index.html
+++ b/templates/index.html
@@ -127,10 +127,10 @@
     </div>
 
     <main>
-        <div class="container grid-container promote-products">
+        <div class="container grid-container products">
             <div>
-                <div><a href="products&asin={{ product_info.5.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.5.first_img }}" alt=""></a></div>
-                <div><a href="products&asin={{ product_info.5.asin }}{{ includ_user_id_url }}" title="{{ product_info.5.title }}" class="display-row-3">{{ product_info.5.title }}</a></div>
+                <div><a href="products&asin={{ product_info.2.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.0.first_img }}" alt=""></a></div>
+                <div><a href="products&asin={{ product_info.2.asin }}{{ includ_user_id_url }}" title="{{ product_info.2.title }}" class="display-row-3">{{ product_info.0.title }}</a></div>
                 <div>
                     <span class="flex-container price">
                         <span class="price-symbol">$</span>
