--- a/templates/products.html
+++ b/templates/products.html
@@ -14,7 +14,7 @@
         
         <div class="container">&nbsp;&nbsp;result over {{ lenth }}</div>
 
-        <div class="container grid-container">
+        <div class="container grid-container products">
             {% for product_info in product_info %}
             <div class="margin-around">
                 <div><a href="products&asin={{ product_info.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.first_img }}" alt=""></a></div>
