--- a/static/css/module.css
+++ b/static/css/module.css
@@ -284,13 +284,13 @@ Screen: for mobile, width under 980px
     color: #000fff;
     text-decoration: underline;
   }
-  .promote-products
+  .products
   {
-    background-color: #e9e9e9;
+    background-color: #f5f5f5;
     padding: 3%;
     /* border-radius: 16px; */
   }
-  .promote-products > div
+  .products > div
   {
     background-color: #fff;
     border-radius: 16px;
