--- a/static/css/module.css
+++ b/static/css/module.css
@@ -165,15 +165,21 @@ form-login-signUp
 } */
 .display-row-3
 {
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  line-clamp: 3;
-  -webkit-line-clamp: 3;
   overflow: hidden;
   text-overflow: ellipsis;
+  -webkit-line-clamp: 3;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  line-clamp: 3; 
   padding: 2px 0;
 }
-
+.bag
+{
+  background: url('/static/image/ico/shpping-bag.png') no-repeat 0 12px;
+  display: block;
+  width: 25px;
+  height: 55px;
+}
 /* 
 my-cart card --start
 */
@@ -200,6 +206,11 @@ my-cart card --end
 .promote-sku > div
 {
   width: 50%;
+  height: 500px;
+}
+.promote-sku > div:first-child
+{
+  text-align: center;
 }
 .promote-sku > div:last-child > div
 {
@@ -211,6 +222,17 @@ my-cart card --end
   color: #000fff;
   text-decoration: underline;
 }
+/* .products
+{
+  background-color: #fcfcfc;
+  padding: 1%;
+}
+.products > div
+{
+  background-color: #fff;
+  border-radius: 6px;
+  padding: 3%;
+} */
 /*************************************************LINE*************************************************/
 /*************************************************
 Screen: for mobile, width under 980px
@@ -223,7 +245,7 @@ Screen: for mobile, width under 980px
     top: 25%; 
     left: 13%; 
     width: 70%; 
-    min-height: 100px; 
+    height: 30%; 
     padding: 30px;
     background: rgb(0, 0, 0, 0.2);
     border-radius: 10px;
@@ -234,6 +256,13 @@ Screen: for mobile, width under 980px
     /* min-height: 60px; */
     padding: 10px;
     text-align: center;
+  }
+  .bag
+  {
+    background: url('/static/image/ico/cartbag.png') no-repeat 45px 45px;
+    display: block;
+    width: 150px;
+    height: 150px;
   }
   .widget-btn
   {
@@ -267,16 +296,18 @@ Screen: for mobile, width under 980px
   }
   .promote-sku
   {
+    height: 500px;
     padding: 10% 0;
   }
   .promote-sku > div
   {
-    width: 40%;
-    margin: 5%;
+    width: 50%;
+    /* margin: 5%; */
+    height: 400px;
   }
   .promote-sku > div:last-child > div
   {
-    margin-bottom: 5%;
+    margin-bottom: 10%;
   }
   .buyOnAmazon
   {
@@ -296,6 +327,22 @@ Screen: for mobile, width under 980px
     border-radius: 16px;
     padding: 5% 5% 15% 5%;
   }
+  .products > div > div > a
+  {
+    display: block;
+    height: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 3;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    line-clamp: 3; 
+    padding: 2px 0;
+  }
+  .products > div:last-child
+  {
+    display: none;
+  }
   .product-info > div > h1
   {
     font-size: 52px;
@@ -314,6 +361,10 @@ Screen: for mobile, width under 980px
     width:80%;
     margin: 10px 10%;
     padding: 10px 0;
+  }
+  .account_login > ul > li
+  {
+    margin: 5% 0;
   }
   .account_login > ul > li > input[type="text"], .account_signup > ul > li > input[type="text"]
   {
@@ -339,7 +390,7 @@ Screen: for mobile, width under 980px
   button[id="login"]
   {
     display: block;
-    width: 99%;
+    width: 100%;
     height: 100px;
     line-height: 100px;
     border: 1px solid rgb(126, 197, 149, 0.6);
