--- a/templates/nav.html
+++ b/templates/nav.html
@@ -12,13 +12,6 @@
                 {% for key, value in nav_nav.items %}
                 <li><a href="{{ value }}">{{ key }}</a></li>
                 {% endfor %}
-                
-                <!-- {% if user_account %}
-                <li><a href="{{ nav_account.signUp.0 }}">{{ nav_account.signUp.1 }}</a></li>
-                <li><a href="{{ nav_account.login.0 }}">{{ nav_account.login.1 }}</a></li>
-                {% else %}
-                <li><a href="{{ nav_account.login.0 }}">{{ user_account }}</a></li>
-                {% endif %} -->
             </ul>
             <!-- test client & body width/height -->
             <!-- <div id="hei" style="line-height: 55px;"></div> -->
@@ -34,12 +27,6 @@
             <!-- <div><a href="{{ nav_account.cart.0 }}" class="material-symbols-outlined size-30">shopping_cart</a></div> -->
             <div><a href="{{ nav_account.cart.0 }}" class="bag"></a></div>
             {% endif %}
-            <!-- {% if user_account %}
-            <div><a href="{{ nav_account.login.0 }}" title="login" class="material-symbols-outlined size-30">account_circle</a></div>
-            {% else %}
-            <div><a href="{{ nav_account.myAccount.0 }}" class="material-symbols-outlined size-30">account_circle</a></div>
-            {% endif %} -->
-            <!-- <div><a href="{{ nav_account.Cart.0 }}" class="material-symbols-outlined size-30">shopping_cart</a></div> -->
         </div>
     </div>
 
@@ -47,7 +34,12 @@
         <ul class="no-padding no-margin no-list-style">
             <li><a href="{{ nav_nav.Products }}" class="material-symbols-outlined size-48">menu</a></li>
             <li><a class="brand-mini" href="{{ nav_index.index }}" id="width-mini"></a></li>
+            <!-- <div id="hei" style="line-height: 55px;"></div> -->
+            {% if user_status %}
             <li><a href="{{ nav_account.cart.0 }}" class="bag"></a></li>
+            {% else %}
+            <li><a href="{{ nav_account.login.0 }}" class="bag"></a></li>
+            {% endif %}
         </ul>
     </div>
 </nav>
