animation.js update

--- a/templates/head.html
+++ b/templates/head.html
@@ -23,5 +23,6 @@
 
 <!-- Js -->
 <script src="/static/js/base.js" defer="defer"></script>
+<script src="/static/js/animation.js" defer="defer"></script>
 <script src="/static/js/account.js" defer="defer"></script>
 <script src="/static/js/price.js" defer="defer"></script>
