--- a/templates/test.html
+++ b/templates/test.html
@@ -9,7 +9,7 @@
 <meta http-equiv="Expires" content="0">
 <meta http-equiv="Cache-Control" content="no-cache">
 <meta http-equiv="Pragma" content="no-cache">
-
+<script src="/static/js/base.js" defer="defer"></script>
 <!-- Google Fonts -->
 <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,200,0,0" /> -->
 
@@ -77,7 +77,7 @@ function pre()
 
 <title></title>
 </head>
-<body style=" background-color: bisque; ">
+<body style=" background-color: bisque; " page_id="test">
 
     <nav style="min-height: 100px; background-color: #ff0000;">
         <div class="container flex-container">
@@ -90,6 +90,13 @@ function pre()
         </div>
     </nav>
     
+    <nav id="kris" style="min-height: 500px; width: 100%; border: #ff0000 solid 2px; overflow: hidden; position: relative; margin: 5% 0;">
+        <div id="jessie" class="flex-container" style="position: absolute; left: 0px;">
+            <div style="height: 600px;"><img style="height: 600px;" src="/static/image/products/B0BTXB89PG/v1.00/970/1-A+-970.jpg" alt=""></div>
+            <div style="height: 600px;"><img style="height: 600px;" src="/static/image/products/B0BTXB89PG/v1.00/970/2-A+-970.jpg" alt=""></div>
+        </div>
+    </nav>
+
     <main class="container grid-container" style="background-color: #ffbb00; border: 1px solid #ff0000;">
         <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
         <div style="width: 200px; height:200px; line-height: 200px; border: 1px solid #fffeee; text-align: center;">img</div>
